<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

   <RelativeLayout android:layout_width="fill_parent"
                   android:layout_height="wrap_content">
      <TextView android:id="@+id/info_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
      <TextView android:id="@+id/info_broadcastdata"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/info_title"/>
      <TextView android:id="@+id/info_shortdescription"
                android:autoLink="all"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_broadcastdata"/>
      <TextView android:id="@+id/info_description"
                android:autoLink="all"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_shortdescription"/>
      <TextView android:id="@+id/info_lbl_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_lbl_genre"
                android:singleLine="false"
                android:layout_below="@id/info_description"/>
      <TextView android:id="@+id/info_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:singleLine="false"
                android:layout_toRightOf="@id/info_lbl_genre"
                android:layout_alignTop="@id/info_lbl_genre"/>
      <TextView android:id="@+id/info_lbl_actor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_lbl_actor"
                android:singleLine="false"
                android:layout_below="@id/info_genre"/>
      <TextView android:id="@+id/info_actor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:singleLine="false"
                android:layout_toRightOf="@id/info_lbl_actor"
                android:layout_alignTop="@id/info_lbl_actor"/>
      <TextView android:id="@+id/info_lbl_formatinformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_lbl_formatinformation"
                android:singleLine="false"
                android:layout_below="@id/info_actor"/>
      <TextView android:id="@+id/info_formatinformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:singleLine="false"
                android:layout_toRightOf="@id/info_lbl_formatinformation"
                android:layout_alignTop="@id/info_lbl_formatinformation"/>
      <TextView android:id="@+id/info_lbl_repetitionon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_lbl_repetitionon"
                android:singleLine="false"
                android:layout_below="@id/info_formatinformation"/>
      <TextView android:id="@+id/info_repetitionon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:singleLine="false"
                android:layout_toRightOf="@id/info_lbl_repetitionon"
                android:layout_alignTop="@id/info_lbl_repetitionon"/>
      <TextView android:id="@+id/info_lbl_repetitionof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_lbl_repetitionof"
                android:singleLine="false"
                android:layout_below="@id/info_repetitionon"/>
      <TextView android:id="@+id/info_repetitionof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:singleLine="false"
                android:layout_toRightOf="@id/info_lbl_repetitionof"
                android:layout_alignTop="@id/info_lbl_repetitionof"/>
€      <TextView android:id="@+id/info_lbl_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_lbl_website"
                android:singleLine="false"
                android:layout_below="@id/info_repetitionof"/>
      <TextView android:id="@+id/info_website"
                android:autoLink="all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:singleLine="false"
                android:layout_toRightOf="@id/info_lbl_website"
                android:layout_alignTop="@id/info_lbl_website"/>

   </RelativeLayout>
</ScrollView>